# CASE-Examples-Conversion

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  case_validate.yml  lint.yml
data/: Makefile  case-example.schema.json  geo.json
dotnet/: CASE2GeoJSON.csproj  CASEConversionExamples.csproj  Helpers.cs  Program.cs  README.md  Types.cs
java/: README.md
java/case2geo/: pom.xml
java/case2geo/src/main/java/org/caseontology/examples/: CASE2Geo.java  GeoReader.java
java/case2geo/src/main/java/org/caseontology/examples/geojson/: Feature.java  GeoRecord.java  Geometry.java  Properties.java  Root.java
java/case2geo/src/test/java/org/caseontology/examples/: CASE2GeoTest.java
output/: Makefile  dotnet.geojson  java.geojson  python.geojson  rust.geojson
python/: CASE2GeoJSON.py  README.md  case2geojson.py  converter.py  geotypes.py  geoutilities.py
rust/: .gitignore  README.md
rust/case2geojson/: Cargo.toml  Makefile
rust/case2geojson/src/: main.rs
schema/: Makefile
