[package]
name = "case2geojson"
version = "0.1.0"
edition = "2021"

[dependencies]
geojson = "0.24.1"
iref = "3.2.2"
json-ld = { version = "0.21.4" }
oxigraph = { version = "0.5.5", default-features = false}
serde_json = "1.0.149"
static-iref = "3.0.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "test-util"] }
