[package]
name = "case2geojson"
version = "0.1.0"
edition = "2021"

[dependencies]
geojson = "1.0.0"
iref = "4.0.0"
json-ld = { version = "0.21.4" }
oxigraph = { version = "0.5.6", default-features = false}
serde_json = "1.0.149"
static-iref = "3.0.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "test-util"] }
