[package]
name = "case2geojson"
version = "0.1.0"
edition = "2021"

[dependencies]
geojson = "1.0.0"
iref = "3.2.2"
json-ld = { version = "0.21.4" }
oxigraph = { version = "0.5.7", default-features = false}
serde_json = "1.0.149"
static-iref = "3.0.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "test-util"] }
